--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "plugins": ["react", "jsx-a11y", "import"],
   "rules": {
+    "linebreak-style": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": [2, { "ignorePureComponents": true }],
     "react/forbid-prop-types": [0, { "forbid": [] }],
