--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.12.3",
     "fetch-mock": "^7.3.0",
     "node-fetch": "^2.3.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
